--- a/src/components/LaunchPad/LaunchPad.css
+++ b/src/components/LaunchPad/LaunchPad.css
@@ -156,6 +156,7 @@
   .launch-pad {
     padding: 20px;
     margin-left: 0;
+    margin-top: 56px;
   }
 
   .launch-card {
